--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "dependencies": {
     "astro": "^5.12.3"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^5.0.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
